# Github

./: README.txt
Business creation project/: planning.gan  (+1 more)
C language/Chess game/bart_belaloui-bertot_projet_siam/src/: CMakeLists.txt  Makefile  api_siam.c  api_siam.h  compilation.sh  condition_victoire_partie.c  condition_victoire_partie.h  coordonnees_plateau.c  coordonnees_plateau.h  coup_jeu.c  coup_jeu.h  entree_sortie.c  entree_sortie.h  entree_sortie_seance_5.c  jeu_siam.c  jeu_siam.h  joueur.c  joueur.h  main.c  mode_interactif.c  mode_interactif.h  noms.txt  orientation_deplacement.c  orientation_deplacement.h  parseur_mode_interactif.c  parseur_mode_interactif.h  piece_siam.c  piece_siam.h  plateau_modification.c  plateau_modification.h  plateau_siam.c  plateau_siam.h  poussee.c  poussee.h  type_piece.c  type_piece.h  victoire_siam.c  victoire_siam.h
C language/Chess game/bart_belaloui-bertot_projet_siam/visualiseur/: CMakeLists.txt  Makefile  README  api.cpp  api.h  entree_sortie.cpp  entree_sortie.h  jeu_siam.cpp  jeu_siam.h  piece_caracteristiques.cpp  piece_caracteristiques.h  piece_siam.cpp  piece_siam.h  plateau_coordonnees.cpp  plateau_coordonnees.h  plateau_siam.cpp  plateau_siam.h  visualiseur  visualiseur.cpp
C language/Chess game/bart_belaloui-bertot_projet_siam/visualiseur/mesh/: elephant.off  rhinoceros.off  rock.off
C language/Chess game/bart_belaloui-bertot_projet_siam/visualiseur/mesh/text/: 0.off  1.off  2.off  3.off  4.off
C language/Chess game/scripts_verification/script/: CMakeLists.txt  __init__.py  fonctions_analyse.py
(+649 files in other folders)
